--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
     <script>
         $(document).ready(function() {
             $('.img-area').slick({
+                slidesToShow: 3,
+                slidesToScroll: 2,
                 dots: false,
                 arrows: true,
                 autoplay: true,
                 fade: true,
-                autoplaySpeed: 3000,
-                infinite: true,
-                slidesToShow: 3,
-                slidesToScroll: 2
+                autoplaySpeed: 1000,
+                // infinite: true
             })
         });
     </script>
