header & service bloc updated

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h2>Accounting by the Book. Perform with Trust.</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="img-area">
+            <div class="service-list">
                 <div class="item-service">
                     <div class="img-bloc"><img src="./public/assets/services/preparing-annual-accounts-with-coworkers-pfuz9o4jagmqffgdyk2uvjxvv82hlwvtafaknze1j8.jpg" alt="preparing-annual-accounts-with-coworkers"></div>
                     <div class="description">
