--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <span class="videoPlay"><i class="fa-solid fa-play"></i></span>
             </div>
         </section>
-        <section id="serice">
+        <section id="service">
             <div class="title">
                 <span>Our Service</span>
                 <h2>Accounting by the Book. Perform with Trust.</h2>
@@ -143,6 +143,102 @@
                         <h4>Analytics</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, voluptate!</p>
                         <a href="#" class="btn"><i class="fa-solid fa-arrow-right-long"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="about atout">
+            <div class="text-bloc">
+                <div class="title">
+                    <span>Why Choose Us</span>
+                    <h2>Keep all the money that is yours.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="jumbotron">
+                    <img src="./public/assets/icones/light.svg" alt="idea">
+                    <div class="description">
+                        <h3>We Believe in Best Quality</h3>
+                        <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
+                    </div>
+                </div>
+                <div class="jumbotron">
+                    <img src="./public/assets/icones/light.svg" alt="idea">
+                    <div class="description">
+                        <h3>We Believe in Good Relation</h3>
+                        <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
+                    </div>
+                </div>
+                <div class="jumbotron">
+                    <img src="./public/assets/icones/light.svg" alt="idea">
+                    <div class="description">
+                        <h3>We Believe in Abilities</h3>
+                        <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
+                    </div>
+                </div>
+            </div>
+            <div class="img-bloc">
+                <img src="./public/assets/redhead-curly-woman-office-worker-analyzes-data-makes-accounting-report-poses-in-coworking-office.jpg" alt="redhead-curly-woman-office-worker-analyzes-data-makes-accounting-report-poses-in-coworking-office">
+                <span class="videoPlay"><i class="fa-solid fa-play"></i></span>
+            </div>
+        </section>
+        <section id="steps">
+            <div class="title">
+                <span>How it works</span>
+                <h2>Easy Step Process</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="container">
+                <div class="bloc">
+                    <span class="step">01</span>
+                    <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
+                    <div class="description">
+                        <h3>Consultation</h3>
+                        <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
+                        <a href="#" class="btn-more btn">Learn more</a>
+                    </div>
+                </div>
+                <div class="bloc">
+                    <span class="step">02</span>
+                    <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
+                    <div class="description">
+                        <h3>Service Process</h3>
+                        <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
+                        <a href="#" class="btn-more btn">Learn more</a>
+                    </div>
+                </div>
+                <div class="bloc">
+                    <span class="step">03</span>
+                    <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
+                    <div class="description">
+                        <h3>Delivery</h3>
+                        <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
+                        <a href="#" class="btn-more btn">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="advice">
+            <div class="title">
+                <span>Why Choose Us</span>
+                <h2>We provide expert advice for all size businesses..</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                <a href="#" class="btn">Get started</a>
+            </div>
+            <div class="twice">
+                <div class="bloc">
+                    <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
+                    <div class="description">
+                        <h3>Help Center</h3>
+                        <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
+                        <a href="#" class="btn-more btn">Find answer</a>
+                    </div>
+                </div>
+                <div class="bloc">
+                    <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
+                    <div class="description">
+                        <h3>consultations</h3>
+                        <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
+                        <a href="#" class="btn-more btn">Chat now</a>
                     </div>
                 </div>
             </div>
