--- a/index.html
+++ b/index.html
@@ -150,28 +150,28 @@
         <section id="about atout">
             <div class="text-bloc">
                 <div class="title">
-                    <span>Why Choose Us</span>
+                    <span>Why choose us</span>
                     <h2>Keep all the money that is yours.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
                 </div>
                 <div class="jumbotron">
                     <img src="./public/assets/icones/light.svg" alt="idea">
                     <div class="description">
-                        <h3>We Believe in Best Quality</h3>
+                        <h3>We believe in best quality</h3>
                         <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
                     </div>
                 </div>
                 <div class="jumbotron">
                     <img src="./public/assets/icones/light.svg" alt="idea">
                     <div class="description">
-                        <h3>We Believe in Good Relation</h3>
+                        <h3>We believe in good relation</h3>
                         <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
                     </div>
                 </div>
                 <div class="jumbotron">
                     <img src="./public/assets/icones/light.svg" alt="idea">
                     <div class="description">
-                        <h3>We Believe in Abilities</h3>
+                        <h3>We believe in abilities</h3>
                         <span>Dictum senectus cursus ultrices morbi est himenaeos per condimentum faucibus pede adipiscing</span>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
         <section id="steps">
             <div class="title">
                 <span>How it works</span>
-                <h2>Easy Step Process</h2>
+                <h2>Easy step process</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="container">
@@ -201,7 +201,7 @@
                     <span class="step">02</span>
                     <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
                     <div class="description">
-                        <h3>Service Process</h3>
+                        <h3>Service process</h3>
                         <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
                         <a href="#" class="btn-more btn">Learn more</a>
                     </div>
@@ -219,7 +219,7 @@
         </section>
         <section id="advice">
             <div class="title">
-                <span>Why Choose Us</span>
+                <span>Our advice</span>
                 <h2>We provide expert advice for all size businesses..</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
                 <a href="#" class="btn">Get started</a>
@@ -228,7 +228,7 @@
                 <div class="bloc">
                     <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
                     <div class="description">
-                        <h3>Help Center</h3>
+                        <h3>Help center</h3>
                         <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
                         <a href="#" class="btn-more btn">Find answer</a>
                     </div>
@@ -236,11 +236,77 @@
                 <div class="bloc">
                     <img src="./public/assets/icones/calc.svg" alt="Taxes and business">
                     <div class="description">
-                        <h3>consultations</h3>
+                        <h3>Consultations</h3>
                         <span>Phasellus magnis non pellentesque fames volutpat turpis accumsan cras sit</span>
                         <a href="#" class="btn-more btn">Chat now</a>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="package">
+            <div class="title">
+                <span>Choose Your Package</span>
+                <h2>Accounting Services That Work for You.</h2>
+            </div>
+            <div class="container">
+                <div class="package-item">
+                    <div class="top">
+                        <h3>Start up</h3>
+                        <p>Basic package service</p>
+                    </div>
+                    <div class="price">
+                        <h4><sup>CFA</sup>10 000 <sup>/month</sup></h4>
+                    </div>
+                    <div class="features">
+                        <ul class="features-list">
+                            <li>Up to 10 Consultations</li>
+                            <li>Access to cloud service</li>
+                            <li>Access Base Knowledge</li>
+                            <li>Email Support</li>
+                        </ul>             
+                        <a href="#" class="btn-more btn">Choose package</a>
+                    </div>
+                </div>
+                <div class="package-item">
+                    <div class="top">
+                        <h3>Small Business</h3>
+                        <p>Pro package service</p>
+                    </div>
+                    <div class="price">
+                        <h4><sup>CFA</sup>50 000 <sup>/month</sup></h4>
+                    </div>
+                    <div class="features">
+                        <ul class="features-list">
+                            <li>Up to 10 Consultations</li>
+                            <li>Access to cloud service</li>
+                            <li>Access Base Knowledge</li>
+                            <li>Email Support</li>
+                        </ul>             
+                        <a href="#" class="btn-more btn">Choose package</a>
+                    </div>
+                </div>
+                <div class="package-item">
+                    <div class="top">
+                        <h3>Enterprise Business</h3>
+                        <p>Enterprise package service</p>
+                    </div>
+                    <div class="price">
+                        <h4><sup>CFA</sup>100 000 <sup>/month</sup></h4>
+                    </div>
+                    <div class="features">
+                        <ul class="features-list">
+                            <li>Up to 10 Consultations</li>
+                            <li>Access to cloud service</li>
+                            <li>Access Base Knowledge</li>
+                            <li>Email Support</li>
+                        </ul>             
+                        <a href="#" class="btn-more btn">Choose package</a>
+                    </div>
+                </div>
+            </div>
+            <div class="custom-package">
+                <h4>Need custom package? <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span></h4>
+                <a href="#" class="btn">Contact us</a>
             </div>
         </section>
     </main>
