--- a/index.html
+++ b/index.html
@@ -309,6 +309,50 @@
                 <a href="#" class="btn">Contact us</a>
             </div>
         </section>
+        <section id="Testimony">
+            <div class="title">
+                <span>Testimony</span>
+                <h2>Our Clients Reviews</h2>
+            </div>
+            <div class="img-area">
+                <div class="testimonial">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                </div>
+                <div class="testimonial">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                </div>
+                <div class="testimonial">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                </div>
+                <div class="testimonial">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                </div>
+            </div>
+        </section>
+        <section id="faq">
+            <div class="title">
+                <span>FAQ</span>
+                <h2>Frequently Ask Questions</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="filter">
+            <label for="bloc1">Lorem ipsum dolor sit.</label>
+            <input type="checkbox" id="bloc1">
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+            <label for="bloc2">Lorem ipsum dolor sit.</label>
+            <input type="checkbox" id="bloc2">
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+            <label for="bloc3">Lorem ipsum dolor sit.</label>
+            <input type="checkbox" id="bloc3">
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+            <label for="bloc4">Lorem ipsum dolor sit.</label>
+            <input type="checkbox" id="bloc4">
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+            <label for="bloc5">Lorem ipsum dolor sit.</label>
+            <input type="checkbox" id="bloc5">
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     <div class="popup">
@@ -325,13 +369,13 @@
     <script>
         $(document).ready(function() {
             $('.img-area').slick({
-                slidesToShow: 3,
-                slidesToScroll: 2,
-                dots: false,
+                // slidesToShow: 3,
+                // slidesToScroll: 2,
+                dots: true,
                 arrows: true,
                 autoplay: true,
-                fade: true,
-                autoplaySpeed: 1000,
+                // fade: true,
+                // autoplaySpeed: 1000,
                 // infinite: true
             })
         });
