--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <li>Access to cloud service</li>
                             <li>Access Base Knowledge</li>
                             <li>Email Support</li>
-                        </ul>             
+                        </ul>
                         <a href="#" class="btn-more btn">Choose package</a>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                             <li>Access to cloud service</li>
                             <li>Access Base Knowledge</li>
                             <li>Email Support</li>
-                        </ul>             
+                        </ul>
                         <a href="#" class="btn-more btn">Choose package</a>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                             <li>Access to cloud service</li>
                             <li>Access Base Knowledge</li>
                             <li>Email Support</li>
-                        </ul>             
+                        </ul>
                         <a href="#" class="btn-more btn">Choose package</a>
                     </div>
                 </div>
@@ -316,16 +316,20 @@
             </div>
             <div class="img-area">
                 <div class="testimonial">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
+                        saepe ad!</p>
                 </div>
                 <div class="testimonial">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
+                        saepe ad!</p>
                 </div>
                 <div class="testimonial">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
+                        saepe ad!</p>
                 </div>
                 <div class="testimonial">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
+                        saepe ad!</p>
                 </div>
             </div>
         </section>
@@ -336,25 +340,151 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="filter">
-            <label for="bloc1">Lorem ipsum dolor sit.</label>
-            <input type="checkbox" id="bloc1">
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
-            <label for="bloc2">Lorem ipsum dolor sit.</label>
-            <input type="checkbox" id="bloc2">
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
-            <label for="bloc3">Lorem ipsum dolor sit.</label>
-            <input type="checkbox" id="bloc3">
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
-            <label for="bloc4">Lorem ipsum dolor sit.</label>
-            <input type="checkbox" id="bloc4">
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
-            <label for="bloc5">Lorem ipsum dolor sit.</label>
-            <input type="checkbox" id="bloc5">
-            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+                <label for="bloc1">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc1">
+                <div class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus corrupti quidem tempora cum, suscipit ratione non! Maxime, officia quisquam quidem tempora laboriosam nam nesciunt! Doloremque omnis sit cumque voluptate natus?</div>
+                <label for="bloc2">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc2">
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+                <label for="bloc3">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc3">
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti soluta maiores harum eos officia facilis ab quibusdam, iusto eum, illum quidem distinctio nesciunt architecto id molestiae, eaque nostrum impedit doloremque.</div>
+                <!-- <label for="bloc4">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc4">
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+                <label for="bloc5">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc5">
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div>
+                <label for="bloc5">Lorem ipsum dolor sit.</label>
+                <input type="checkbox" id="bloc5">
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem.</div> -->
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="bande1">
+            <p>Sign up our newsletter to get update information, news or insight.</p>
+            <form action="#">
+                <input type="text" placeholder="Enter your email"> <input type="submit" class="btn" value="Sign up">
+            </form>
+        </div>
+        <div class="bande2">
+            <div class="item">
+                <img src="./public/assets/icones/call.svg" alt="call us">
+                <p>
+                    <span>Call us</span>
+                    <span>+212 656 716 530</span>
+                </p>
+            </div>
+            <div class="item">
+                <img src="./public/assets/icones/map.svg" alt="location">
+                <p>
+                    <span>Headquarter</span>
+                    <span>20280 Mostaqbal, Casablanca</span>
+                </p>
+            </div>
+            <div class="item">
+                <img src="./public/assets/icones/mail.svg" alt="email us">
+                <p>
+                    <span>Email us</span>
+                    <span>moustapha.md26@gmail.com</span>
+                </p>
+            </div>
+        </div>
+        <div class="bande3">
+            <section>
+                <div class="group">
+                    <h5>Service</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Tax</a>
+                        </li>
+                        <li>
+                            <a href="#">Consulting</a>
+                        </li>
+                        <li>
+                            <a href="#">Audit & Assurance</a>
+                        </li>
+                        <li>
+                            <a href="#">Mergers & Acquisitions</a>
+                        </li>
+                        <li>
+                            <a href="#">Risk & Financial Advisory</a>
+                        </li>
+                        <li>
+                            <a href="#">Analytics</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="group">
+                    <h5>Industries</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Consumer</a>
+                        </li>
+                        <li>
+                            <a href="#">Energy, Resources & Industrials</a>
+                        </li>
+                        <li>
+                            <a href="#">Financial Services</a>
+                        </li>
+                        <li>
+                            <a href="#">Government & Public Services</a>
+                        </li>
+                        <li>
+                            <a href="#">Life Sciences & Health Care</a>
+                        </li>
+                        <li>
+                            <a href="#">Technology, Media & Telecommunications</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="group">
+                    <h5>Company</h5>
+                    <ul>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Leadership</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Partner</a>
+                        </li>
+                        <li>
+                            <a href="#">Article & News</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="group">
+                    <h5>Support</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Help Center</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                    <div class="rs">
+                        <img src="./public/assets/icones/facebook.svg" alt="facebook">
+                        <img src="./public/assets/icones/twitter.svg" alt="twitter">
+                        <img src="./public/assets/icones/youtube.svg" alt="youtube">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <a href="#"><img src="./public/assets/logo.svg" alt="logo du site"></a>
+                <p>Copyright © 2021 DCS, All rights reserved.</p>
+            </section>
+        </div>
+    </footer>
     <div class="popup">
         <span class="videoStop"><i class="fa-solid fa-xmark"></i></span>
         <div class="vid">
