--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <label id="menubar" for="menu"><i class="fa-solid fa-bars"></i></label>
             <input type="checkbox" id="menu">
             <ul class="menu-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./pages/about.html">About us</a></li>
                 <li class="item-parent">
                     <a href="#">Service <i class="fa-solid fa-chevron-down"></i></a>
                     <ul class="submenu">
@@ -30,7 +30,7 @@
                         <li><a href="#">Audit & Assurance</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="./pages/contact.html">Contact us</a></li>
             </ul>
             <a href="tel:+212 65 671 6530" class="tel"><i class="fa-solid fa-phone"></i> +212 65 671 6530</a>
         </nav>
@@ -257,7 +257,7 @@
                         <p>Basic package service</p>
                     </div>
                     <div class="price">
-                        <h4><sup>CFA</sup>10 000 <sup>/month</sup></h4>
+                        <h4>999 DH<br/><sup>/month</sup></h4>
                     </div>
                     <div class="features">
                         <ul class="features-list">
@@ -275,7 +275,7 @@
                         <p>Pro package service</p>
                     </div>
                     <div class="price">
-                        <h4><sup>CFA</sup>50 000 <sup>/month</sup></h4>
+                        <h4>1999 DH<br/><sup>/month</sup></h4>
                     </div>
                     <div class="features">
                         <ul class="features-list">
@@ -293,7 +293,7 @@
                         <p>Enterprise package service</p>
                     </div>
                     <div class="price">
-                        <h4><sup>CFA</sup>100 000 <sup>/month</sup></h4>
+                        <h4>10 000 DH<br/><sup>/month</sup></h4>
                     </div>
                     <div class="features">
                         <ul class="features-list">
@@ -318,16 +318,13 @@
             </div>
             <div class="img-area">
                 <div class="testimonial">
-                    <q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
-                        saepe ad!</p></q>
+                    <q></q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
                 </div>
                 <div class="testimonial">
-                    <q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
-                        saepe ad!</p></q>
+                    <q></q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
                 </div>
                 <div class="testimonial">
-                    <q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur
-                        saepe ad!</p></q>
+                    <q></q><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis voluptatem pariatur libero mollitia quia suscipit dolores dolore facere et obcaecati, temporibus exercitationem, laborum accusantium reprehenderit explicabo aspernatur saepe ad!</p>
                 </div>
 
             </div>
